merchantsap is ok

--- a/conf/php/php53.ini
+++ b/conf/php/php53.ini
@@ -457,7 +457,7 @@ memory_limit = 128M
 ; Development Value: E_ALL
 ; Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; http://php.net/error-reporting
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+error_reporting = E_ALL
 
 ; This directive controls whether or not and where PHP will output errors,
 ; notices and warnings too. Error output is very useful during development, but
@@ -474,7 +474,7 @@ error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-errors
-display_errors = Off
+display_errors = On
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. PHP's default behavior is to suppress those
@@ -1919,9 +1919,17 @@ ldap.max_links = -1
 
 [XDebug]
 ; Debug Config
+xdebug.enable = 1
 xdebug.remote_enable = 1
 xdebug.remote_handler = "dbgp"
-xdebug.remote_connect_back = 1
+xdebug.remote_connect_back = Off
+xdebug.remote_host = 172.16.25.181
 xdebug.remote_port = 9000
 xdebug.remote_log = "/var/log/dnmp/php.xdebug.log"
+xdebug.profiler_append = 0
+xdebug.profiler_enable = 1
+xdebug.profiler_enable_trigger = 0
+xdebug.profiler_output_name = "cache.out.%t-%s"
+xdebug.auto_trace = Off
+xdebug.max_nesting_level =500
 
