--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     volumes:
 #      - ./www/:/var/www/html/:rw
       - D:/htdocs/:/var/www/html/:rw
-      - ./conf/nginx/nginxconf.d:/etc/nginx/conf.d/:rw
+      - ./conf/nginx/nginxconf.d:/etc/nginx/conf.d:rw
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./log/nginx/:/var/log/dnmp/:rw
     restart: always
     networks:
       - net-php72
-      - net-php56
-      - net-php54
+#      - net-php56
+#      - net-php54
       - net-php53
   php72:
     container_name: dnmp-php72
@@ -43,64 +43,64 @@ services:
     networks:
       - net-php72
       - net-mysql80
-      - net-mysql5553
+#      - net-mysql5553
       - net-redis
 
-  php56:
-    container_name: dnmp-php56
-    build:
-      context: .
-      args:
-        PHP_VERSION: 5.6
-        SOURCE_LIST: jessie
-        XDEBUG_VERSION: 2.5.5
-        SWOOLE_VERSION: 2.0.11
-        SUPPORT_MCRYPT: "true"
-        BUILT_IN_OPCACHE: "true"
-    expose:
-      - "9000"
-    volumes:
-#      - ./www/:/var/www/html/:rw
-      - D:/htdocs/:/var/www/html/:rw
-      - ./conf/php/php56.ini:/usr/local/etc/php/php.ini:ro
-      - ./conf/php/php56-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
-      - ./log/php/php56/:/var/log/dnmp/:rw
-    restart: always 
-    cap_add:
-      - SYS_PTRACE
-    networks:
-      - net-php56
-      - net-mysql80
-      - net-mysql5553
-      - net-redis
+#   php56:
+#     container_name: dnmp-php56
+#     build:
+#       context: .
+#       args:
+#         PHP_VERSION: 5.6
+#         SOURCE_LIST: jessie
+#         XDEBUG_VERSION: 2.5.5
+#         SWOOLE_VERSION: 2.0.11
+#         SUPPORT_MCRYPT: "true"
+#         BUILT_IN_OPCACHE: "true"
+#     expose:
+#       - "9000"
+#     volumes:
+# #      - ./www/:/var/www/html/:rw
+#       - D:/htdocs/:/var/www/html/:rw
+#       - ./conf/php/php56.ini:/usr/local/etc/php/php.ini:ro
+# #      - ./conf/php/php56-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
+#       - ./log/php/php56/:/var/log/dnmp/:rw
+#     restart: always
+#     cap_add:
+#       - SYS_PTRACE
+#     networks:
+#       - net-php56
+#       - net-mysql80
+#       - net-mysql5553
+#       - net-redis
 
-  php54:
-    container_name: dnmp-php54
-    build:
-      context: .
-      args:
-        PHP_VERSION: 5.4
-        SOURCE_LIST: jessie
-        XDEBUG_VERSION: 2.4.1
-        SWOOLE_VERSION: "false"
-        SUPPORT_MCRYPT: "true"
-        BUILT_IN_OPCACHE: "false"
-    expose:
-      - "9000"
-    volumes:
-#      - ./www/:/var/www/html/:rw
-      - D:/htdocs/:/var/www/html/:rw
-      - ./conf/php/php54.ini:/usr/local/etc/php/php.ini:ro
-      - ./conf/php/php54-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
-      - ./log/php/php54/:/var/log/dnmp/:rw
-    restart: always
-    cap_add:
-      - SYS_PTRACE
-    networks:
-      - net-php54
-      - net-mysql80
-      - net-mysql5553
-      - net-redis
+#   php54:
+#     container_name: dnmp-php54
+#     build:
+#       context: .
+#       args:
+#         PHP_VERSION: 5.4
+#         SOURCE_LIST: jessie
+#         XDEBUG_VERSION: 2.4.1
+#         SWOOLE_VERSION: "false"
+#         SUPPORT_MCRYPT: "true"
+#         BUILT_IN_OPCACHE: "false"
+#     expose:
+#       - "9000"
+#     volumes:
+# #      - ./www/:/var/www/html/:rw
+#       - D:/htdocs/:/var/www/html/:rw
+#       - ./conf/php/php54.ini:/usr/local/etc/php/php.ini:ro
+#       - ./conf/php/php54-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
+#       - ./log/php/php54/:/var/log/dnmp/:rw
+#     restart: always
+#     cap_add:
+#       - SYS_PTRACE
+#     networks:
+#       - net-php54
+#       - net-mysql80
+#       - net-mysql5553
+#       - net-redis
 
   php53:
 #    image: surenkid/php53:latest
@@ -128,7 +128,7 @@ services:
       - SYS_PTRACE
     networks:
       - net-php53
-      - net-mysql80
+#      - net-mysql80
       - net-mysql5553
       - net-redis
     depends_on:
@@ -158,7 +158,7 @@ services:
       - "3380:3306"
     volumes:
       - ./conf/mysql/mysql80.cnf:/etc/mysql/conf.d/mysql.cnf:ro
-#      - ./conf/mysql/mysql80/:/etc/mysql/:rw
+      - ./conf/mysql/mysql80/:/etc/mysql/:rw
       - ./mysql/mysql80/:/var/lib/mysql/:rw
     restart: always
     networks:
@@ -181,7 +181,7 @@ services:
       - net-mysql5553
     environment:
       MYSQL_ROOT_PASSWORD: "123456"
-    
+
 
   redis:
     image: redis:4.0
@@ -226,8 +226,8 @@ services:
 
 networks:
   net-php72:
-  net-php56:
-  net-php54:
+  # net-php56:
+  # net-php54:
   net-php53:
   net-mysql80:
   net-mysql5553:
